--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-A Basic jQuery Accordion
-========================
+## A Basic jQuery Accordion
 A very basic jquery accordion with code from Beginning jQuery Book.
 
 Demo: http://codepen.io/khyamay/pen/dAEIB
